crear mappers para doctor